--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -18,7 +18,7 @@
   color: #fff;
   text-align: center;
   border-top: 1px solid rgba(255, 255, 255, 0.3);
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   position: relative;
   border-radius: 8px 8px 0 0;
 }
