--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -41,15 +41,17 @@
   align-items: center;
   justify-content: space-evenly;
   gap: 1rem;
+  flex-direction: row-reverse;
 }
 
 .logo {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   gap: 0.4rem;
   font-size: 1.7rem;
   font-weight: bold;
   color: #fff;
+  flex-direction: row-reverse;
 }
 
 .logoIcon {
@@ -64,7 +66,6 @@
   align-items: center;
   flex: 1;
   justify-content: center;
-  flex-direction: row-reverse;
 }
 
 .nav a {
