--- a/components/Reports/Reports.module.css
+++ b/components/Reports/Reports.module.css
@@ -102,6 +102,17 @@
   margin: 0 auto;
 }
 
+.labelContainer {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.required {
+  color: #e53e3e; 
+  font-size: 1.2rem;
+}
+
 .form label {
   font-weight: 600;
   font-size: 1rem;
